--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,11 @@ env_logger = "0.10.0"
 dotenvy = "0.15"
 serde = {version="1.0.106", features=["derive"]}
 uuid = { version = "1.3.2", features = ["serde", "v4"] }
+sqlx = { version="0.7.1", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"]}
 
 #sse
 actix-web-lab = "0.18.5"
 parking_lot = "0.12.1"
 futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
+#password hashing crate
+argon2 = "0.5.0"
