--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,9 @@ sqlx = { version="0.7.1", features = ["runtime-tokio", "postgres", "macros", "uu
 actix-web-lab = "0.18.5"
 parking_lot = "0.12.1"
 futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
+
 #password hashing crate
 argon2 = "0.5.0"
+
+# CORS 
+actix-cors = "0.6.4"
