--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,7 @@ actix-cors = "0.6.4"
 
 # TIMESTAMP 
 chrono = { version = "0.4.11", features = ["serde"] }
+
+# Cookie
+actix-identity = "0.4.0"
+
