--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,8 @@ chrono = { version = "0.4.11", features = ["serde"] }
 # Cookie
 actix-identity = "0.4.0"
 
+# Swagger 
+# utoipa = {version = "4.0.0", features = ["actix_extras", "chrono", "uuid"]}
+# utoipa-swagger-ui= {version = "4.0.0"}
+
+
