--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ actix-rt = "2.8.0"
 env_logger = "0.10.0"
 dotenvy = "0.15"
 serde = {version="1.0.106", features=["derive"]}
+serde_json = "1"
 uuid = { version = "1.3.2", features = ["serde", "v4"] }
 sqlx = { version="0.7.1", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"]}
 
